--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.4.0",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   }
 }
